add_executable(test_arnoldi main_Arnoldi.cpp)
target_link_libraries(test_arnoldi PRIVATE BlazeIterative)
add_test(arnoldi test_arnoldi)

add_executable(test_lanczos main_Lanczos.cpp)
target_link_libraries(test_lanczos PRIVATE BlazeIterative)
add_test(lanczos test_lanczos)

add_executable(test_preconditionedcg main_PreconditionedCG.cpp)
target_link_libraries(test_preconditionedcg PRIVATE BlazeIterative)
add_test(preconditionedcg test_preconditionedcg)

add_executable(test_gmres main_GMRES.cpp)
target_link_libraries(test_gmres PRIVATE BlazeIterative)
add_test(gmres test_gmres)

add_executable(test_cg main_CG.cpp)
target_link_libraries(test_cg PRIVATE BlazeIterative)
add_test(cg test_cg)

add_executable(test_bicgstab main_BiCGSTAB.cpp)
target_link_libraries(test_bicgstab PRIVATE BlazeIterative)
add_test(bicgstab test_bicgstab)

add_executable(test_preconditionedbicgstab main_PreconditionedBiCGSTAB.cpp)
target_link_libraries(test_preconditionedbicgstab PRIVATE BlazeIterative)
add_test(preconditionedbicgstab test_preconditionedbicgstab)
